--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -4,14 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:background="@drawable/item_background"
-    android:backgroundTint="@color/white"
+    android:backgroundTint="#DBE6E7"
     android:layout_margin="5dp">
+
+    <ImageView
+        android:id="@+id/imageView_headline"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_baseline_image_24">
+    </ImageView>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
         android:padding="5dp">
@@ -32,7 +40,7 @@
                 tools:text="Title"
                 android:textSize="35dp"/>
             <TextView
-                android:id="@+id/textView_description"
+                android:id="@+id/textView_source"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="@tools:sample/lorem/random"
